fix: share picture

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>2017四六级查询</title>
+        <title>四六级查询</title>
+        <link rel="shortcut/icon" type="text/css" href="http://hongyan.cqupt.edu.cn/cet_re/src/assets/logo.jpg">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript">
             !function(e,t){function n(){t.body?t.body.style.fontSize=12*o+"px":t.addEventListener("DOMContentLoaded",n)}function d(){var e=i.clientWidth/10;e=e>70?70:e;i.style.fontSize=e+"px"}var i=t.documentElement,o=e.devicePixelRatio||1;if(n(),d(),e.addEventListener("resize",d),e.addEventListener("pageshow",function(e){e.persisted&&d()}),o>=2){var a=t.createElement("body"),s=t.createElement("div");s.style.border=".5px solid transparent",a.appendChild(s),i.appendChild(a),1===s.offsetHeight&&i.classList.add("hairlines"),i.removeChild(a)}}(window,document);
@@ -18,10 +19,10 @@
             WXSHARE.config({debug: false});
             WXSHARE.ready(function() {
                 var option = {
-                      title: "2017四六级查询",
+                      title: "四六级查询",
                       link: "http://hongyan.cqupt.edu.cn/cet_re/dist/#/",
-                      imgUrl: 'http://hongyan.cqupt.edu.cn/cet_re/src/assets/banner.png',
-                      desc: '2017四六级查询',
+                      imgUrl: 'http://hongyan.cqupt.edu.cn/cet_re/src/assets/logo.jpg',
+                      desc: '四六级查询',
                       type: '',
                       success: function() {
                           console.log('分享成功');
